# zagadkobot

./: .gitignore  .gitmodules  README.md  pubspec.yaml  riddles_db.json  training_chatml.json  zagadkownik-architektura.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  host-toolchain.cmake  llama_jni.cpp
docs/: 2026-03-10-zagadkobot-architektura-initial.md  2026-03-11-llm-on-mobile-poc.md  2026-03-12-riddle-db-and-llm-commentary.md  2026-03-13-model-tests.md  2026-03-13-vulkan-gpu-offloading-attempt.md
lib/: app.dart  main.dart
lib/core/: theme.dart
lib/features/home/: home_screen.dart
lib/features/home/widgets/: llm_demo_panel.dart  tts_demo_panel.dart
lib/features/model_selection/: model_selection_screen.dart
lib/models/: app_settings.dart  riddle.dart  riddle.g.dart  topic.dart
lib/services/: riddle_repository.dart
lib/services/llm/: llm_prompt.dart  llm_service.dart  llm_service_llama_cpp.dart
lib/services/tts/: tts_service_flutter_tts.dart
scripts/: chat-ml-conversion.py  download-model.py  generate-examples.py
test/models/: riddle_test.dart
test/services/llm/: llm_service_test.dart
test/services/tts/: tts_service_test.dart
zagadkobot/: .gitignore  pubspec.yaml
zagadkobot/android/app/: build.gradle.kts
zagadkobot/lib/: main.dart
zagadkobot/lib/models/: app_settings.g.dart  riddle.dart  riddle.g.dart  topic.dart
zagadkobot/lib/providers/: llm_provider.dart
zagadkobot/test/models/: app_settings_test.dart  riddle_test.dart
(+12 files in other folders)
